--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 
 	</div>
 	<div class="col-3">
-		<a class="connect" href="#" target="dialog2">
+		<a class="connect" href="#"name="a2" onClick="div_none('dialog2');">
 		<div class="m1">
 			<div class="picture"></div>
 			<dt class="t5">Dev<br><em>Ojha</em></dt><br><dt class="t6">Founder</dt>
@@ -36,7 +36,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		
 	</div>
 	<div class="col-3">
-		<a class="connect" href="#" target="dialog3">
+		<a class="connect" href="#" name="a3" onClick="div_none('dialog3');">
 		<div class="m1">
 			<div class="picture"></div>
 			<dt class="t5">Eugen<br><em>S.</em></dt><br><dt class="t6">Founder</dt>
@@ -45,7 +45,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		
 	</div>
 	<div class="col-3">
-		<a class="connect" href="#" target="dialog4">
+		<a class="connect" href="#" name="a4" onClick="div_none('dialog4');">
 		<div class="m1">
 			<div class="picture"></div>
 			<dt class="t5">Kevin<br><em>Cheng</em></dt><br><dt class="t6">Founder</dt>
@@ -55,11 +55,11 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 	</div>
 
 </div>
-<div class="dialog1" style="display:none;" onClick="div_none('dialog1');">
+<div class="dialog1" style="display:none;">
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
-				<a class="close" href="#" >
+				<a class="close" href="#" onClick="div_none('dialog1');">
 					<span></span>
 					<span></span>
 				</a>
@@ -95,11 +95,11 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		</div>
 	</div>
 </div>
-<div class="dialog2" style="display:none;">
+<div class="dialog2" style="display:none;" onClick="div_none('dialog2');">
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
-				<a class="close" href="javascript:web.dialog.close()">
+				<a class="close" href="" onClick="div_none('dialog2');">
 					<span></span>
 					<span></span>
 				</a>
@@ -135,11 +135,11 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		</div>
 	</div>
 </div>
-<div class="dialog3" style="display:none;">
+<div class="dialog3" style="display:none;" >
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
-				<a class="close" href="javascript:web.dialog.close()">
+				<a class="close" href="" onClick="div_none('dialog3');">
 					<span></span>
 					<span></span>
 				</a>
@@ -177,11 +177,11 @@ He is trying hard to build more robust and secure software on blockchain using C
 		</div>
 	</div>
 </div>
-<div class="dialog4" style="display:none;">
+<div class="dialog4" style="display:none;" >
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
-				<a class="close" href="#">
+				<a class="close" href="#" onClick="div_none('dialog4');">
 					<span></span>
 					<span></span>
 				</a>
