--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		</div>
 	</div>
 </div>
-<div class="dialog2" style="display:none;" onClick="div_none('dialog2');">
+<div class="dialog2" style="display:none;">
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
