--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 			<div class="dialog-body{{ site.about-team-links.id }}">
 				<div class="dialog-text">
 					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
-					<h1>Sunny <br><em>Aggarwal</em></h1>
+					<h1>Dev <br><em>Ojha</em></h1>
 					<div class="social">
 						{%- if site.about-team-links.email -%}
 						<a href="mailto:{{ site.about-team-links-2.email }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-email.png"></a>
@@ -147,7 +147,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 			<div class="dialog-body{{ site.about-team-links.id }}">
 				<div class="dialog-text">
 					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
-					<h1>Sunny <br><em>Aggarwal</em></h1>
+					<h1>Eugen <br><em>S.</em></h1>
 					<div class="social">
 						{%- if site.about-team-links.email -%}
 						<a href="mailto:{{ site.about-team-links-3.email }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-email.png"></a>
@@ -189,7 +189,7 @@ He is trying hard to build more robust and secure software on blockchain using C
 			<div class="dialog-body{{ site.about-team-links.id }}">
 				<div class="dialog-text">
 					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
-					<h1>Sunny <br><em>Aggarwal</em></h1>
+					<h1>Kevin <br><em>Cheng</em></h1>
 					<div class="social">
 						{%- if site.about-team-links.email -%}
 						<a href="mailto:{{ site.about-team-links-4.email }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-email.png"></a>
