--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 					<span></span>
 				</a>
 			</div>
-			<div class="dialog-body{{ site.about-team-links.id }}">
+			<div class="dialog-body">
 				<div class="dialog-text">
 					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
 					<h1>Sunny <br><em>Aggarwal</em></h1>
@@ -104,7 +104,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 					<span></span>
 				</a>
 			</div>
-			<div class="dialog-body{{ site.about-team-links.id }}">
+			<div class="dialog-body">
 				<div class="dialog-text">
 					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
 					<h1>Dev <br><em>Ojha</em></h1>
@@ -144,7 +144,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 					<span></span>
 				</a>
 			</div>
-			<div class="dialog-body{{ site.about-team-links.id }}">
+			<div class="dialog-body">
 				<div class="dialog-text">
 					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
 					<h1>Eugen <br><em>S.</em></h1>
@@ -186,7 +186,7 @@ He is trying hard to build more robust and secure software on blockchain using C
 					<span></span>
 				</a>
 			</div>
-			<div class="dialog-body{{ site.about-team-links.id }}">
+			<div class="dialog-body">
 				<div class="dialog-text">
 					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
 					<h1>Kevin <br><em>Cheng</em></h1>
