--- a/about.html
+++ b/about.html
@@ -69,22 +69,22 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
 					<h1>Sunny <br><em>Aggarwal</em></h1>
 					<div class="social">
-						{%- if site.about-team-links.email -%}
+						{%- if site.about-team-links-1.email -%}
 						<a href="mailto:{{ site.about-team-links-1.email }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-email.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.twitter -%}
+						{%- if site.about-team-links-1.twitter -%}
 						<a href="https://twitter.com/{{ site.about-team-links-1.twitter }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-Twitter.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.keybase -%}
+						{%- if site.about-team-links-1.keybase -%}
 						<a href="http://keybase.io//{{ site.about-team-links-1.keybase }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-keybase.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.gitHub -%}
+						{%- if site.about-team-links-1.gitHub -%}
 						<a href="{{ site.about-team-links-1.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.linkedin -%}
+						{%- if site.about-team-links-1.linkedin -%}
 						<a href="https://linkedin.com/in/{{ site.about-team-links-1.linkedin }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-LinkedIn.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.webpage -%}
+						{%- if site.about-team-links-1.webpage -%}
 						<a href="{{ site.about-team-links-1.webpage }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-webpage.png"></a>
 						{%- endif -%}
 					</div>
@@ -109,22 +109,22 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
 					<h1>Dev <br><em>Ojha</em></h1>
 					<div class="social">
-						{%- if site.about-team-links.email -%}
+						{%- if site.about-team-links-2.email -%}
 						<a href="mailto:{{ site.about-team-links-2.email }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-email.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.twitter -%}
+						{%- if site.about-team-links-2.twitter -%}
 						<a href="https://twitter.com/{{ site.about-team-links-2.twitter }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-Twitter.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.keybase -%}
+						{%- if site.about-team-links-2.keybase -%}
 						<a href="http://keybase.io//{{ site.about-team-links-2.keybase }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-keybase.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.gitHub -%}
+						{%- if site.about-team-links-2.gitHub -%}
 						<a href="{{ site.about-team-links-2.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.linkedin -%}
+						{%- if site.about-team-links-2.linkedin -%}
 						<a href="https://linkedin.com/in/{{ site.about-team-links-2.linkedin }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-LinkedIn.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.webpage -%}
+						{%- if site.about-team-links-2.webpage -%}
 						<a href="{{ site.about-team-links-2.webpage }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-webpage.png"></a>
 						{%- endif -%}
 					</div>
@@ -149,22 +149,22 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
 					<h1>Eugen <br><em>S.</em></h1>
 					<div class="social">
-						{%- if site.about-team-links.email -%}
+						{%- if site.about-team-links-3.email -%}
 						<a href="mailto:{{ site.about-team-links-3.email }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-email.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.twitter -%}
+						{%- if site.about-team-links-3.twitter -%}
 						<a href="https://twitter.com/{{ site.about-team-links-3.twitter }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-Twitter.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.keybase -%}
+						{%- if site.about-team-links-3.keybase -%}
 						<a href="http://keybase.io//{{ site.about-team-links-3.keybase }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-keybase.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.gitHub -%}
+						{%- if site.about-team-links-3.gitHub -%}
 						<a href="{{ site.about-team-links-3.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.linkedin -%}
+						{%- if site.about-team-links-3.linkedin -%}
 						<a href="https://linkedin.com/in/{{ site.about-team-links-3.linkedin }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-LinkedIn.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.webpage -%}
+						{%- if site.about-team-links-3.webpage -%}
 						<a href="{{ site.about-team-links-3.webpage }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-webpage.png"></a>
 						{%- endif -%}
 					</div>
@@ -191,22 +191,22 @@ He is trying hard to build more robust and secure software on blockchain using C
 					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
 					<h1>Kevin <br><em>Cheng</em></h1>
 					<div class="social">
-						{%- if site.about-team-links.email -%}
+						{%- if site.about-team-links-4.email -%}
 						<a href="mailto:{{ site.about-team-links-4.email }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-email.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.twitter -%}
+						{%- if site.about-team-links-4.twitter -%}
 						<a href="https://twitter.com/{{ site.about-team-links-4.twitter }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-Twitter.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.keybase -%}
+						{%- if site.about-team-links-4.keybase -%}
 						<a href="http://keybase.io//{{ site.about-team-links-4.keybase }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-keybase.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.gitHub -%}
+						{%- if site.about-team-links-4.gitHub -%}
 						<a href="{{ site.about-team-links-4.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.linkedin -%}
+						{%- if site.about-team-links-4.linkedin -%}
 						<a href="https://linkedin.com/in/{{ site.about-team-links-4.linkedin }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-LinkedIn.png"></a>
 						{%- endif -%}
-						{%- if site.about-team-links.webpage -%}
+						{%- if site.about-team-links-4.webpage -%}
 						<a href="{{ site.about-team-links-4.webpage }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-webpage.png"></a>
 						{%- endif -%}
 					</div>
