--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 			</div>
 			<div class="dialog-body">
 				<div class="dialog-text">
-					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
+					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-1.photoUrl }}" alt="">
 					<h1>Sunny <br><em>Aggarwal</em></h1>
 					<div class="social">
 						{%- if site.about-team-links-1.email -%}
