--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 			</div>
 			<div class="dialog-body">
 				<div class="dialog-text">
-					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
+					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-2.photoUrl }}" alt="">
 					<h1>Dev <br><em>Ojha</em></h1>
 					<div class="social">
 						{%- if site.about-team-links-2.email -%}
@@ -146,7 +146,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 			</div>
 			<div class="dialog-body">
 				<div class="dialog-text">
-					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
+					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-3.photoUrl }}" alt="">
 					<h1>Eugen <br><em>S.</em></h1>
 					<div class="social">
 						{%- if site.about-team-links-3.email -%}
@@ -188,7 +188,7 @@ He is trying hard to build more robust and secure software on blockchain using C
 			</div>
 			<div class="dialog-body">
 				<div class="dialog-text">
-					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/picture.png" alt="">
+					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-4.photoUrl }}" alt="">
 					<h1>Kevin <br><em>Cheng</em></h1>
 					<div class="social">
 						{%- if site.about-team-links-4.email -%}
