--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 	<div class="col-3">
 		<a class="connect" href="#" name="a1" onClick="div_none('dialog1');">
 		<div class="m1" >
-			<div class="picture"></div>
+			<div class="picture"><img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-1.photoUrl }}" alt=""></div>
 			<dt class="t5">Sunny<br><em>Aggarwal</em></dt><br><dt class="t6">Founder</dt>
 			
 		</div>
