--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 	<div class="col-3">
 		<a class="connect" href="#"name="a2" onClick="div_none('dialog2');">
 		<div class="m1">
-			<div class="picture"></div>
+			<div class="picture"><img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-2.photoUrl }}" alt=""></div>
 			<dt class="t5">Dev<br><em>Ojha</em></dt><br><dt class="t6">Founder</dt>
 		</div>
 		</a>
@@ -38,7 +38,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 	<div class="col-3">
 		<a class="connect" href="#" name="a3" onClick="div_none('dialog3');">
 		<div class="m1">
-			<div class="picture"></div>
+			<div class="picture"><img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-3.photoUrl }}" alt=""></div>
 			<dt class="t5">Eugen<br><em>S.</em></dt><br><dt class="t6">Founder</dt>
 		</div>
 		</a>
@@ -47,7 +47,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 	<div class="col-3">
 		<a class="connect" href="#" name="a4" onClick="div_none('dialog4');">
 		<div class="m1">
-			<div class="picture"></div>
+			<div class="picture"><img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-4.photoUrl }}" alt=""></div>
 			<dt class="t5">Kevin<br><em>Cheng</em></dt><br><dt class="t6">Founder</dt>
 		</div>
 		</a>
