--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 <div class="team-main">
 	<h1>Team</h1>
 	<div class="col-3">
-		<a class="connect" href="#" name="a1" onClick="div_none('dialog1');">
+		<a class="connect" href="javascript:void(0)" name="a1" onClick="div_none('dialog1');">
 		<div class="m1" >
 			<div class="picture"><img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-1.photoUrl }}" alt=""></div>
 			<dt class="t5">Sunny<br><em>Aggarwal</em></dt><br><dt class="t6">Founder</dt>
@@ -27,7 +27,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 
 	</div>
 	<div class="col-3">
-		<a class="connect" href="#"name="a2" onClick="div_none('dialog2');">
+		<a class="connect" href="javascript:void(0)"name="a2" onClick="div_none('dialog2');">
 		<div class="m1">
 			<div class="picture"><img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-2.photoUrl }}" alt=""></div>
 			<dt class="t5">Dev<br><em>Ojha</em></dt><br><dt class="t6">Founder</dt>
@@ -36,7 +36,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		
 	</div>
 	<div class="col-3">
-		<a class="connect" href="#" name="a3" onClick="div_none('dialog3');">
+		<a class="connect" href="javascript:void(0)" name="a3" onClick="div_none('dialog3');">
 		<div class="m1">
 			<div class="picture"><img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-3.photoUrl }}" alt=""></div>
 			<dt class="t5">Eugen<br><em>S.</em></dt><br><dt class="t6">Founder</dt>
@@ -45,7 +45,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		
 	</div>
 	<div class="col-3">
-		<a class="connect" href="#" name="a4" onClick="div_none('dialog4');">
+		<a class="connect" href="javascript:void(0)" name="a4" onClick="div_none('dialog4');">
 		<div class="m1">
 			<div class="picture"><img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-4.photoUrl }}" alt=""></div>
 			<dt class="t5">Kevin<br><em>Cheng</em></dt><br><dt class="t6">Founder</dt>
@@ -59,7 +59,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
-				<a class="close" href="#" onClick="div_none('dialog1');">
+				<a class="close" href="javascript:void(0)" onClick="div_none('dialog1');">
 					<span></span>
 					<span></span>
 				</a>
@@ -99,7 +99,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
-				<a class="close" href="" onClick="div_none('dialog2');">
+				<a class="close" href="javascript:void(0)" onClick="div_none('dialog2');">
 					<span></span>
 					<span></span>
 				</a>
@@ -139,7 +139,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
-				<a class="close" href="" onClick="div_none('dialog3');">
+				<a class="close" href="javascript:void(0)" onClick="div_none('dialog3');">
 					<span></span>
 					<span></span>
 				</a>
@@ -181,7 +181,7 @@ He is trying hard to build more robust and secure software on blockchain using C
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
-				<a class="close" href="#" onClick="div_none('dialog4');">
+				<a class="close" href="javascript:void(0)" onClick="div_none('dialog4');">
 					<span></span>
 					<span></span>
 				</a>
