--- a/about.html
+++ b/about.html
@@ -48,11 +48,21 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 		<a class="connect" href="javascript:void(0)" name="a4" onClick="div_none('dialog4');">
 		<div class="m1">
 			<div class="picture"><img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-4.photoUrl }}" alt=""></div>
+			<dt class="t5">Joon<br><em>Yun</em></dt><br><dt class="t6">Founder</dt>
+		</div>
+		</a>
+		
+	</div>
+	<div class="col-3">
+		<a class="connect" href="javascript:void(0)" name="a5" onClick="div_none('dialog5');">
+		<div class="m1">
+			<div class="picture"><img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-5.photoUrl }}" alt=""></div>
 			<dt class="t5">Kevin<br><em>Cheng</em></dt><br><dt class="t6">Founder</dt>
 		</div>
 		</a>
 		
 	</div>
+	
 
 </div>
 <div class="dialog1" style="display:none;">
@@ -189,7 +199,7 @@ He is trying hard to build more robust and secure software on blockchain using C
 			<div class="dialog-body">
 				<div class="dialog-text">
 					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-4.photoUrl }}" alt="">
-					<h1>Kevin <br><em>Cheng</em></h1>
+					<h1>Joon <br><em>Yun</em></h1>
 					<div class="social">
 						{%- if site.about-team-links-4.email -%}
 						<a href="mailto:{{ site.about-team-links-4.email }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-email.png"></a>
@@ -208,6 +218,46 @@ He is trying hard to build more robust and secure software on blockchain using C
 						{%- endif -%}
 						{%- if site.about-team-links-4.webpage -%}
 						<a href="{{ site.about-team-links-4.webpage }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-webpage.png"></a>
+						{%- endif -%}
+					</div>
+					<p>Joon started working on blockchain space since he won the second Cosmos Hackatom with ETGate(now Peggy) and joined Tendermint. He involved in the development of the low-level store layer and early architectural design of IBC protocol in Cosmos-SDK. He is an enthusiast of functional programming, programming language theory, and composable governance.</p>
+					
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="dialog5" style="display:none;" >
+	<div class="dialog-inner">
+		<div class="dialog-container">
+			<div class="dialog-heading">
+				<a class="close" href="javascript:void(0)" onClick="div_none('dialog5');">
+					<span></span>
+					<span></span>
+				</a>
+			</div>
+			<div class="dialog-body">
+				<div class="dialog-text">
+					<img class="user-face" src="{{ '' | absolute_url }}/assets/img/{{ site.about-team-links-5.photoUrl }}" alt="">
+					<h1>Kevin <br><em>Cheng</em></h1>
+					<div class="social">
+						{%- if site.about-team-links-5.email -%}
+						<a href="mailto:{{ site.about-team-links-5.email }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-email.png"></a>
+						{%- endif -%}
+						{%- if site.about-team-links-5.twitter -%}
+						<a href="https://twitter.com/{{ site.about-team-links-5.twitter }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-Twitter.png"></a>
+						{%- endif -%}
+						{%- if site.about-team-links-5.keybase -%}
+						<a href="http://keybase.io//{{ site.about-team-links-5.keybase }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-keybase.png"></a>
+						{%- endif -%}
+						{%- if site.about-team-links-5.gitHub -%}
+						<a href="{{ site.about-team-links-5.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
+						{%- endif -%}
+						{%- if site.about-team-links-5.linkedin -%}
+						<a href="https://linkedin.com/in/{{ site.about-team-links-5.linkedin }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-LinkedIn.png"></a>
+						{%- endif -%}
+						{%- if site.about-team-links-5.webpage -%}
+						<a href="{{ site.about-team-links-5.webpage }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-webpage.png"></a>
 						{%- endif -%}
 					</div>
 					<p>Kevin is a creative designer with multiple professional backgrounds.
