--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 	
 
 </div>
-<div class="dialog1" style="display:none;">
+<div class="dialog1" style="display:none;" onClick="div_none('dialog1');">
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
