--- a/about.html
+++ b/about.html
@@ -279,7 +279,7 @@ for (i=0; i<allPageTags.length;i++){
 if(allPageTags[i].className == theclass){
 var obj = allPageTags[i];
 if(obj.style.display == "none"){
-obj.style.display = "block";
+obj.style.display = "table";
  
 }else{
 obj.style.display = "none";
