--- a/about.html
+++ b/about.html
@@ -227,7 +227,7 @@ He is trying hard to build more robust and secure software on blockchain using C
 		</div>
 	</div>
 </div>
-<div class="dialog5" style="display:none;" >
+<div class="dialog5" style="display:none;" id="menu">
 	<div class="dialog-inner">
 		<div class="dialog-container">
 			<div class="dialog-heading">
