--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 						<a href="http://keybase.io//{{ site.about-team-links-1.keybase }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-keybase.png"></a>
 						{%- endif -%}
 						{%- if site.about-team-links-1.gitHub -%}
-						<a href="{{ site.about-team-links-1.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
+						<a href="http://github.com/{{ site.about-team-links-1.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
 						{%- endif -%}
 						{%- if site.about-team-links-1.linkedin -%}
 						<a href="https://linkedin.com/in/{{ site.about-team-links-1.linkedin }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-LinkedIn.png"></a>
@@ -123,7 +123,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 						<a href="http://keybase.io//{{ site.about-team-links-2.keybase }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-keybase.png"></a>
 						{%- endif -%}
 						{%- if site.about-team-links-2.gitHub -%}
-						<a href="{{ site.about-team-links-2.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
+						<a href="http://github.com/{{ site.about-team-links-2.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
 						{%- endif -%}
 						{%- if site.about-team-links-2.linkedin -%}
 						<a href="https://linkedin.com/in/{{ site.about-team-links-2.linkedin }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-LinkedIn.png"></a>
@@ -160,7 +160,7 @@ We are proudly based in Berkeley, CA, home of the Free Speech Movement and are p
 						<a href="http://keybase.io//{{ site.about-team-links-3.keybase }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-keybase.png"></a>
 						{%- endif -%}
 						{%- if site.about-team-links-3.gitHub -%}
-						<a href="{{ site.about-team-links-3.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
+						<a href="http://github.com/{{ site.about-team-links-3.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
 						{%- endif -%}
 						{%- if site.about-team-links-3.linkedin -%}
 						<a href="https://linkedin.com/in/{{ site.about-team-links-3.linkedin }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-LinkedIn.png"></a>
@@ -199,7 +199,7 @@ He is trying hard to build more robust and secure software on blockchain using C
 						<a href="http://keybase.io//{{ site.about-team-links-4.keybase }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-keybase.png"></a>
 						{%- endif -%}
 						{%- if site.about-team-links-4.gitHub -%}
-						<a href="{{ site.about-team-links-4.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
+						<a href="http://github.com/{{ site.about-team-links-4.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
 						{%- endif -%}
 						{%- if site.about-team-links-4.linkedin -%}
 						<a href="https://linkedin.com/in/{{ site.about-team-links-4.linkedin }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-LinkedIn.png"></a>
@@ -236,7 +236,7 @@ He is trying hard to build more robust and secure software on blockchain using C
 						<a href="http://keybase.io//{{ site.about-team-links-5.keybase }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-keybase.png"></a>
 						{%- endif -%}
 						{%- if site.about-team-links-5.gitHub -%}
-						<a href="{{ site.about-team-links-5.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
+						<a href="http://github.com/{{ site.about-team-links-5.gitHub }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-GitHub.png"></a>
 						{%- endif -%}
 						{%- if site.about-team-links-5.linkedin -%}
 						<a href="https://linkedin.com/in/{{ site.about-team-links-5.linkedin }}"><img class="team-icon" src="{{ '' | absolute_url }}/assets/img/Icon-LinkedIn.png"></a>
