--- a/networks.html
+++ b/networks.html
@@ -32,10 +32,10 @@ layout: base
 					<p class="number">3%</p>
 					<p class="tit">Commission</p>
 				</div>
-				<!-- <div class="col-3 ave">
+				<div class="col-3 ave">
 					<p class="number">7-20%</p>
 					<p class="tit">Average Yield</p>
-				</div> -->
+				</div>
 			</div>
 				<p class="tt">About Cosmos</p>
 				<p class="tt2">The Cosmos Hub is an Internet of Blockchains, a network of blockchains able to communicate with each other in a decentralized way.</p>
