--- a/networks.html
+++ b/networks.html
@@ -20,22 +20,22 @@ layout: base
 		<div class="menu1 menu_tab">
 			<div id="tab1" class="tab active">
 				<div class="top-half">
-				<div class="col-3 vot">
+				<div class="col-4 vot">
 					<p class="number">7.67M (4.36%)</p>
 					<p class="tit">Voting Power</p>
 				</div>
-				<div class="col-3 rec">
+				<div class="col-4 rec">
 					<p class="number">100%</p>
 					<p class="tit">Recent Uptime</p>
 				</div>
-				<div class="col-3 comm">
+				<div class="col-4 comm">
 					<p class="number">3%</p>
 					<p class="tit">Commission</p>
 				</div>
-				<div class="col-3 ave">
+				<!--<div class="col-3 ave">
 					<p class="number">7-20%</p>
 					<p class="tit">Average Yield</p>
-				</div>
+				</div>-->
 			</div>
 				<p class="tt">About Cosmos</p>
 				<p class="tt2">The Cosmos Hub is an Internet of Blockchains, a network of blockchains able to communicate with each other in a decentralized way.</p>
